3599: fixes after review